# STC3100

./: README.md
components/STC3100/: CMakeLists.txt
components/STC3100/src/: STC3100.c  STC3100_Manager.c  STC3100_Utils.c  STC3100_Utils.h
components/STC3100/src/include/: STC3100.h  STC3100_Manager.h
components/STC3100/test/: CMakeLists.txt  Settings.h  Test_STC3100.c  Test_STC3100_Manager.c
test/: .gitignore  CMakeLists.txt
test/main/: CMakeLists.txt  main.c
